--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </section>
     </aside>
-    <main class="content">
+    <div class="content">
         <header class="header">
             <div class="header-left">
                 <div class="header-left-image">
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </header>
-        <section class="content-section">
+        <main class="content-section">
             <h1 class="content-title">Dashboard</h1>
             <div class="content-items">
                 <div class="content-item">
