--- a/index.html
+++ b/index.html
@@ -145,6 +145,20 @@
             </div>
             <div class="header-right">
                 <div class="header-right-input">
+                    <a href="#">
+                        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"
+                             class="interactive-icon">
+                            <g clip-path="url(#clip0_1_119)">
+                                <path d="M9.68747 8.3076C11.368 5.93452 10.806 2.64849 8.43288 0.968347C6.05979 -0.7118 2.77377 -0.150145 1.09362 2.22334C-0.586526 4.59642 -0.0248708 7.88204 2.34861 9.56219C4.04241 10.7614 6.28181 10.8537 8.06834 9.79866L11.9501 13.6572C12.3693 14.0984 13.0666 14.1161 13.5078 13.6969C13.9491 13.2782 13.9667 12.5808 13.548 12.1396C13.5347 12.1256 13.5219 12.1127 13.5078 12.0995L9.68747 8.3076ZM5.38733 8.66732C3.51207 8.66772 1.99171 7.14856 1.9905 5.2733C1.9901 3.39804 3.50926 1.87767 5.38492 1.87687C7.25778 1.87607 8.77734 3.39282 8.78095 5.26567C8.78416 7.14133 7.26581 8.6641 5.38974 8.66732C5.38894 8.66732 5.38854 8.66732 5.38733 8.66732Z"
+                                />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_1_119">
+                                    <rect width="14" height="14" fill="white"/>
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
                     <label>
                         <input type="text" class="input-with-icon" placeholder="Search...">
                     </label>
@@ -188,9 +202,9 @@
                                      xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_2_171)">
                                         <path d="M0.552856 15.8328V20H4.97895L18.0389 7.70382L13.6128 3.53658L0.552856 15.8328Z"
-                                              />
+                                        />
                                         <path d="M21.4499 2.91983L18.6939 0.325045C18.2336 -0.108348 17.4841 -0.108348 17.0238 0.325045L14.8638 2.35866L19.2899 6.5259L21.4499 4.49229C21.9102 4.05889 21.9102 3.35322 21.4499 2.91983Z"
-                                              />
+                                        />
                                     </g>
                                     <defs>
                                         <clipPath id="clip0_2_171">
@@ -205,9 +219,9 @@
                                      xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_2_192)">
                                         <path d="M13.4271 7.79551C13.1755 7.55719 12.8965 7.34594 12.5953 7.16562C11.7975 6.68466 10.8701 6.42908 9.92278 6.42908C8.60794 6.42677 7.34653 6.91864 6.41843 7.79551L1.91586 12.0381C0.989332 12.9121 0.468574 14.0963 0.467744 15.3311C0.466002 17.908 2.68327 19.9983 5.42022 19.9999C6.73302 20.0042 7.99327 19.5147 8.92104 18.6402L12.6378 15.1408C12.7053 15.0778 12.743 14.9918 12.7425 14.9023C12.7414 14.7182 12.5819 14.5699 12.3864 14.5709H12.2449C11.4683 14.5735 10.6987 14.4331 9.97944 14.1577C9.84691 14.1063 9.69459 14.1353 9.59362 14.231L6.9211 16.7505C6.09122 17.5319 4.74573 17.5319 3.91585 16.7505C3.08597 15.9692 3.08597 14.7024 3.91585 13.921L8.43613 9.66849C9.26534 8.88875 10.6086 8.88875 11.4378 9.66849C11.9967 10.1637 12.8684 10.1637 13.4272 9.66849C13.6676 9.44193 13.8134 9.14144 13.8378 8.82197C13.8636 8.4402 13.7141 8.06632 13.4271 7.79551Z"
-                                              />
+                                        />
                                         <path d="M20.2554 1.36667C18.32 -0.455538 15.1821 -0.455538 13.2467 1.36667L9.53349 4.85937C9.43153 4.95583 9.40212 5.10093 9.45916 5.22598C9.51553 5.35139 9.64727 5.43188 9.79188 5.42927H9.92284C10.6985 5.42794 11.4668 5.56944 12.1847 5.84587C12.3173 5.89723 12.4696 5.86825 12.5706 5.77256L15.236 3.26633C16.0659 2.48499 17.4114 2.48499 18.2412 3.26633C19.0711 4.04768 19.0711 5.31448 18.2412 6.09582L14.9209 9.21858L14.8926 9.24858L13.7316 10.3351C12.9024 11.1148 11.5591 11.1148 10.7299 10.3351C10.171 9.83988 9.29933 9.83988 8.74053 10.3351C8.49857 10.5633 8.35268 10.8665 8.32991 11.1882C8.30402 11.57 8.45356 11.9439 8.74053 12.2147C9.15024 12.6021 9.6296 12.918 10.1564 13.1479C10.2308 13.1812 10.3051 13.2079 10.3794 13.2379C10.4538 13.2679 10.5316 13.2912 10.606 13.3178C10.6803 13.3445 10.7581 13.3678 10.8325 13.3878L11.0413 13.4411C11.1829 13.4745 11.3245 13.5011 11.4696 13.5245C11.6444 13.5489 11.8205 13.5645 11.9971 13.5711H12.2448H12.2661L12.4785 13.5478C12.5563 13.5445 12.6378 13.5278 12.7298 13.5278H12.8501L13.0944 13.4945L13.2077 13.4745L13.413 13.4345H13.4519C14.3214 13.2289 15.1154 12.805 15.7492 12.208L20.2553 7.96549C22.1908 6.14328 22.1908 3.18889 20.2554 1.36667Z"
-                                             />
+                                        />
                                     </g>
                                     <defs>
                                         <clipPath id="clip0_2_192">
@@ -222,7 +236,7 @@
                                      xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_2_214)">
                                         <path d="M21.6219 9.99298L12.794 0.878906V6.31653H10.9171C5.09729 6.31653 0.379547 10.7584 0.379547 16.2378V19.1194L1.21321 18.2593C4.04759 15.3354 8.05808 13.6694 12.2627 13.6694H12.794V19.1071L21.6219 9.99298Z"
-                                              />
+                                        />
                                     </g>
                                     <defs>
                                         <clipPath id="clip0_2_214">
@@ -237,11 +251,11 @@
                                      xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_2_167)">
                                         <path d="M7.45361 1.81818C7.45361 1.22197 7.94781 0.78624 8.58105 0.78624H13.2158C13.8488 0.78624 14.343 1.22197 14.343 1.81818V2.9484H15.1781V1.81818C15.1781 0.788543 14.3094 0 13.2158 0H8.58105C7.48745 0 6.61853 0.788543 6.61853 1.81818V2.9484H7.45361V1.81818Z"
-                                              />
+                                        />
                                         <path d="M5.96102 20H15.8358C16.7879 20 17.5267 19.2115 17.5267 18.231V6.09337H4.26987V18.231C4.26987 19.2115 5.00872 20 5.96102 20ZM13.5601 7.97048C13.5601 7.75338 13.7471 7.57736 13.9777 7.57736C14.2082 7.57736 14.3952 7.75338 14.3952 7.97048V17.258C14.3952 17.475 14.2082 17.6511 13.9777 17.6511C13.7471 17.6511 13.5601 17.475 13.5601 17.258V7.97048ZM10.4808 7.97048C10.4808 7.75338 10.6677 7.57736 10.8983 7.57736C11.1289 7.57736 11.3158 7.75338 11.3158 7.97048V17.258C11.3158 17.475 11.1289 17.6511 10.8983 17.6511C10.6677 17.6511 10.4808 17.475 10.4808 17.258V7.97048ZM7.40141 7.97048C7.40141 7.75338 7.58837 7.57736 7.81895 7.57736C8.04954 7.57736 8.23649 7.75338 8.23649 7.97048V17.258C8.23649 17.475 8.04954 17.6511 7.81895 17.6511C7.58837 17.6511 7.40141 17.475 7.40141 17.258V7.97048Z"
-                                              />
+                                        />
                                         <path d="M3.84194 5.30712H17.9547C18.5313 5.30712 18.9985 4.86717 18.9985 4.32432C18.9985 3.78148 18.5313 3.34152 17.9547 3.34152H3.84194C3.26538 3.34152 2.7981 3.78148 2.7981 4.32432C2.7981 4.86717 3.26538 5.30712 3.84194 5.30712Z"
-                                              />
+                                        />
                                     </g>
                                     <defs>
                                         <clipPath id="clip0_2_167">
@@ -254,9 +268,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -342,9 +356,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -430,9 +444,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -518,9 +532,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -606,9 +620,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -694,9 +708,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -782,9 +796,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -870,9 +884,9 @@
                             <a href="#">
                                 <svg width="28" height="6" viewBox="0 0 28 6"
                                      xmlns="http://www.w3.org/2000/svg">
-                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3" />
-                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3" />
+                                    <ellipse cx="3.39259" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="14.0137" cy="3" rx="3.18635" ry="3"/>
+                                    <ellipse cx="24.6349" cy="3" rx="3.18635" ry="3"/>
                                 </svg>
                             </a>
                         </div>
@@ -882,10 +896,14 @@
             <button class="content-section-button-right">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_7683_14)">
-                        <path d="M0.333313 1.97667L0.333313 14.69C0.333313 15.78 1.21998 16.6667 2.30998 16.6667H4.99998V18.0233C4.99998 19.1133 5.88665 20 6.97631 20H14.0233C15.1133 20 16 19.1133 16 18.0233V16H19.3333C19.471 16 19.5946 15.9153 19.6443 15.7867C19.6593 15.7477 19.6666 15.707 19.6666 15.6667C19.6666 15.5747 19.6283 15.4843 19.5576 15.42L16 12.186L16 5.31C16 4.22 15.1133 3.33333 14.0233 3.33333H11.3333V1.97667C11.3333 0.886665 10.4466 0 9.35665 0H2.30998C1.21998 0 0.333313 0.886665 0.333313 1.97667ZM14.0233 4C14.7456 4 15.3333 4.58767 15.3333 5.31L15.3333 12.3333C15.3333 12.4273 15.373 12.517 15.4423 12.58L18.4713 15.3333H15.6666C15.4826 15.3333 15.3333 15.4823 15.3333 15.6667V18.0233C15.3333 18.7457 14.7456 19.3333 14.0233 19.3333H6.97631C6.25431 19.3333 5.66665 18.7457 5.66665 18.0233V16.3333L5.66665 5.31C5.66665 5.039 5.74931 4.78733 5.89065 4.578C6.12631 4.22967 6.52498 4 6.97665 4H11H14.0233ZM9.35665 0.666666C10.079 0.666666 10.6666 1.25433 10.6666 1.97667V3.33333H6.97665C6.09131 3.33333 5.33998 3.91867 5.08931 4.72267C5.06998 4.78467 5.05365 4.84767 5.04065 4.912C5.01398 5.04067 4.99998 5.17367 4.99998 5.31L4.99998 16H2.30998C1.58765 16 0.99998 15.4123 0.99998 14.69L0.99998 1.97667C0.99998 1.25433 1.58765 0.666666 2.30998 0.666666H9.35665Z" fill="white"/>
-                        <path d="M9.00498 16V11.3333C9.00498 11.149 8.85565 11 8.67165 11C8.48765 11 8.33832 11.149 8.33832 11.3333V16C8.33832 16.1843 8.48765 16.3333 8.67165 16.3333C8.85565 16.3333 9.00498 16.1843 9.00498 16Z" fill="white"/>
-                        <path d="M10.3383 7V16C10.3383 16.1843 10.4877 16.3333 10.6717 16.3333C10.8557 16.3333 11.005 16.1843 11.005 16V7C11.005 6.81567 10.8557 6.66667 10.6717 6.66667C10.4877 6.66667 10.3383 6.81567 10.3383 7Z" fill="white"/>
-                        <path d="M12.3383 7V16C12.3383 16.1843 12.4877 16.3333 12.6717 16.3333C12.8557 16.3333 13.005 16.1843 13.005 16V7C13.005 6.81567 12.8557 6.66667 12.6717 6.66667C12.4877 6.66667 12.3383 6.81567 12.3383 7Z" fill="white"/>
+                        <path d="M0.333313 1.97667L0.333313 14.69C0.333313 15.78 1.21998 16.6667 2.30998 16.6667H4.99998V18.0233C4.99998 19.1133 5.88665 20 6.97631 20H14.0233C15.1133 20 16 19.1133 16 18.0233V16H19.3333C19.471 16 19.5946 15.9153 19.6443 15.7867C19.6593 15.7477 19.6666 15.707 19.6666 15.6667C19.6666 15.5747 19.6283 15.4843 19.5576 15.42L16 12.186L16 5.31C16 4.22 15.1133 3.33333 14.0233 3.33333H11.3333V1.97667C11.3333 0.886665 10.4466 0 9.35665 0H2.30998C1.21998 0 0.333313 0.886665 0.333313 1.97667ZM14.0233 4C14.7456 4 15.3333 4.58767 15.3333 5.31L15.3333 12.3333C15.3333 12.4273 15.373 12.517 15.4423 12.58L18.4713 15.3333H15.6666C15.4826 15.3333 15.3333 15.4823 15.3333 15.6667V18.0233C15.3333 18.7457 14.7456 19.3333 14.0233 19.3333H6.97631C6.25431 19.3333 5.66665 18.7457 5.66665 18.0233V16.3333L5.66665 5.31C5.66665 5.039 5.74931 4.78733 5.89065 4.578C6.12631 4.22967 6.52498 4 6.97665 4H11H14.0233ZM9.35665 0.666666C10.079 0.666666 10.6666 1.25433 10.6666 1.97667V3.33333H6.97665C6.09131 3.33333 5.33998 3.91867 5.08931 4.72267C5.06998 4.78467 5.05365 4.84767 5.04065 4.912C5.01398 5.04067 4.99998 5.17367 4.99998 5.31L4.99998 16H2.30998C1.58765 16 0.99998 15.4123 0.99998 14.69L0.99998 1.97667C0.99998 1.25433 1.58765 0.666666 2.30998 0.666666H9.35665Z"
+                              fill="white"/>
+                        <path d="M9.00498 16V11.3333C9.00498 11.149 8.85565 11 8.67165 11C8.48765 11 8.33832 11.149 8.33832 11.3333V16C8.33832 16.1843 8.48765 16.3333 8.67165 16.3333C8.85565 16.3333 9.00498 16.1843 9.00498 16Z"
+                              fill="white"/>
+                        <path d="M10.3383 7V16C10.3383 16.1843 10.4877 16.3333 10.6717 16.3333C10.8557 16.3333 11.005 16.1843 11.005 16V7C11.005 6.81567 10.8557 6.66667 10.6717 6.66667C10.4877 6.66667 10.3383 6.81567 10.3383 7Z"
+                              fill="white"/>
+                        <path d="M12.3383 7V16C12.3383 16.1843 12.4877 16.3333 12.6717 16.3333C12.8557 16.3333 13.005 16.1843 13.005 16V7C13.005 6.81567 12.8557 6.66667 12.6717 6.66667C12.4877 6.66667 12.3383 6.81567 12.3383 7Z"
+                              fill="white"/>
                     </g>
                     <defs>
                         <clipPath id="clip0_7683_14">
@@ -895,8 +913,8 @@
                 </svg>
                 <span>Technical support</span>
             </button>
-        </section>
-    </main>
+        </main>
+    </div>
 </div>
 </body>
 </html>
